Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -12,34 +12,20 @@
                   <span class="navbar-toggler-icon"></span>
                </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"><a class="btn navbar-btn w-25 m-1 btn-default text-white active" data-toggle="button">Filtter</a><a class="btn btn-default navbar-btn w-25 m-1 text-white" data-toggle="modal">Search<br></a><a class="btn btn-default navbar-btn w-25 m-1 text-white"
-          data-toggle="modal">About/Settings</a><a class="btn btn-default navbar-btn w-25 m-1 text-white" data-toggle="modal">Login/Register<br></a></div>
+          data-toggle="modal">About/Settings</a><a class="btn btn-default navbar-btn w-25 m-1 text-white" data-toggle="modal" href="modal">Login/Register<br></a></div>
     </div>
   </nav>
-  <div class="py-5">
-    <div class="container">
-      <div class="row h-25">
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-3 h-25"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3 h-25"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3 h-25"></div>
+  <div class="modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header" id="modal"> <button class="close" data-dismiss="modal" type="button">×</button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          <p>One fine body...</p>
+        </div>
+        <div class="modal-footer"> <a class="btn btn-default" data-dismiss="modal">Close</a> <a class="btn btn-primary">Save
+                changes</a> </div>
       </div>
     </div>
   </div>
